--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
 
         <div class="learning-card">
-            <h3>2. 急救流程步驟 (叫叫CD)</h3>
+            <h3>2. 急救流程步驟 (叫叫CAB)</h3>
             
             <span class="sub-title">通用流程：</span>
             <div class="step-box">1. 確認現場安全</div>
